History of this buildout
========================

NOTE: This is now a maintenance branch as long as Minaraad is still
hosted by Zest.  Trunk (4.x) will be used in Belgium on the LNE
servers, using RelStorage.  Any changes done in this maintenance
branch must be ported to trunk as well.


3.31 (unreleased)
-----------------

- Nothing changed yet.


3.30 (2011-11-28)
-----------------

- Added @@is_attending that return True when the current logged-in
  user has registered as attendee for the context.  Context should be
  an MREvent or Hearing, but we kindly return False otherwise; also
  for Anonymous.  Mostly meant to be used in CacheFu rules.
  [maurits]

- Added @@see-email-log for managers to see var/log/minaraad_email.log.
  Default last 50 lines (override with ?num=X, 0 for all).  Optional
  filtering with '?filter=text', for example WARN.
  [maurits]

- Added a property show_linkedin on the portal root.  Also check this
  property when determining if we should show the linkedin button.
  Added upgrade step for this.
  [maurits]

- Only show the linkedin button when viewing the home page.
  [maurits]

- Replaced @@minaraad_globals/isHomePage with
  @@plone_context_state/is_portal_root.
  Removed @@minaraad_globals view.
  [maurits]

- Put the linkedin javascript src right above the div that uses it.
  This way in case of connection problems the rest of the page until
  that point is at least rendered.
  [maurits]

- Use fresh collective.emaillogin 1.0, which is less case sensitive.
  Has an upgrade step to migrate existing email logins to all lower
  case.
  [maurits]

- The advisory type for a project is now 'Unanimous' or 'Abstention
  and/or reject points'. [vincent]

- Added automatic numbering of attachments in agenda items [vincent]

- Changed the existing advisory migration to now migrate a few
  specific folders from the old digibib to projects.
  [maurits]

- When creating an advisory from a project, use the delivery date as