@@ -3,6 +3,12 @@ Release notes from Zest
 
 Manual fixes to do on the site.
 
+Upgrade to 3.31
+---------------
+
+- Add SERVER to scripts/passwords.py (see scripts/passwords.py.in).
+
+
 Upgrade to 3.30
 ---------------
 
