@@ -1,8 +1,18 @@
 # Admin username and password to connect to the Zope server:
-USER = 'adminusername'
-PASS = 'adminpassword'
+USER = 'youradminusername'
+PASS = 'yourpassword'
+
+# Server name.  This is a new setting that was introduced because
+# the url is used in the e-mails that are sent as well, so on the
+# live site it should NOT be localhost.
+SERVER = 'localhost'
+
+# When SERVER is not localhost or 127.0.0.1, we check the
+# following settings as well, otherwise they are ignored; you
+# should still keep them in the file, just to be on the safe side.
+# An empty string is fine then.
+
 # Port that Zope runs on:
 PORT = '8080'
 # id of the Plone Site:
 PLONESITE = 'minaraad'
-
